--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -51,7 +51,8 @@ jobs:
         make install test clean
 
     strategy:
-      python-version: [3.8]
+      matrix:
+        python-version: [3.8]
 
   # # 🤖 CD paragraph
   # #
